Spacing fix

--- a/client/styles/pages/validators.scss
+++ b/client/styles/pages/validators.scss
@@ -233,6 +233,9 @@
       flex: 0 0 7% !important;
     }
 
+    .val-commission{
+      padding-left: 0.5vw !important;
+    }
     .val-action {
         text-align: right;
     }
